Git clean-up