@@ -1,21 +1,11 @@
 package pl.itomaszjanik.test.Fragments;
 
 import android.app.Activity;
-import android.content.ActivityNotFoundException;
-import android.content.Context;
 import android.content.Intent;
-import android.content.SharedPreferences;
 import android.graphics.Bitmap;
-import android.graphics.Canvas;
 import android.graphics.Color;
-import android.graphics.Point;
-import android.graphics.drawable.Drawable;
-import android.net.Uri;
 import android.os.Bundle;
-import android.support.v4.content.res.ResourcesCompat;
-import android.support.v4.widget.NestedScrollView;
 import android.support.v4.widget.SwipeRefreshLayout;
-import android.support.v7.widget.DefaultItemAnimator;
 import android.support.v7.widget.LinearLayoutManager;
 import android.support.v7.widget.RecyclerView;
 import android.view.*;
@@ -24,40 +14,33 @@ import android.widget.RelativeLayout;
 import android.widget.TextView;
 import android.widget.Toast;
 import com.labo.kaji.relativepopupwindow.RelativePopupWindow;
-import okhttp3.ResponseBody;
 import org.joda.time.DateTime;
 import org.parceler.Parcels;
 import pl.itomaszjanik.test.*;
 import pl.itomaszjanik.test.BottomPopup.BottomPopup;
-import pl.itomaszjanik.test.Comments.CommentAdapter;
-import pl.itomaszjanik.test.Comments.CommentClickListener;
-import pl.itomaszjanik.test.Comments.CommentsDivider;
+import pl.itomaszjanik.test.Comments.*;
 import pl.itomaszjanik.test.EllipsisPopup.EllipsisPopup;
 import pl.itomaszjanik.test.EllipsisPopup.EllipsisPopupListener;
-import pl.itomaszjanik.test.ExtendedComponents.CustomImage;
-import pl.itomaszjanik.test.ExtendedComponents.LayoutManagerNoScroll;
+import pl.itomaszjanik.test.Posts.NoteDetailsClickListener;
+import pl.itomaszjanik.test.Posts.ReactNoteCallback;
 import pl.itomaszjanik.test.Remote.*;
-import pl.itomaszjanik.test.RetrofitClient;
-import retrofit2.Call;
-import retrofit2.Callback;
-import retrofit2.Response;
 
 import java.util.ArrayList;
 import java.util.List;
 
 import static pl.itomaszjanik.test.Utilities.hideKeyboard;
 
-public class NoteDetailsActivity extends Activity implements FailedCallback, CommentPostCallback, GetCommentsCallback,
-        ReactCommentsCallback, UpdateCommentCallback, SwipeRefreshLayout.OnRefreshListener{
+public class NoteDetailsActivity extends Activity implements ReactNoteCallback, CommentPostCallback, GetCommentsCallback,
+        ReactCommentsCallback, UpdateCommentCallback, NoteDetailsClickListener, OnEndScrolled,
+        CommentClickListener, CommentsFooterClickListener, SwipeRefreshLayout.OnRefreshListener{
 
     private Note note;
-    private TextView content, hashes;
     private EditText input;
     private BottomPopup bottomPopup;
     private EllipsisPopup ellipsisPopup;
     private SwipeRefreshLayout mSwipeRefreshLayout;
-    private NestedScrollView scrollView;
 
+    private LinearLayoutManager mLayoutManager;
     private int page;
 
     private Comment currentComment;
@@ -65,7 +48,7 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
 
     private RecyclerView recyclerView;
     private CommentAdapter mCommentAdapter;
-    private boolean loading;
+    private boolean loading = true;
 
     private List<Comment> comments = new ArrayList<>();
 
@@ -82,9 +65,13 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
             }
         }
 
-        prepareView();
+        //prepareView();
+        init();
         initListeners();
         initRecyclerView();
+        mCommentAdapter.insertNull();
+        mCommentAdapter.insertNull();
+        mCommentAdapter.insertNull();
         getComments();
 
     }
@@ -93,7 +80,7 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
     public void onResume(){
         super.onResume();
         if (currentComment != null){
-            Utilities.updateCommentCall(NoteDetailsActivity.this, currentComment);
+            Utilities.updateCommentCall(this, currentComment);
         }
     }
 
@@ -108,20 +95,41 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
         getComments();
     }
 
-
     @Override
-    public void likeFailed(){
-        bottomPopup = Utilities.getBottomPopupText(this,
-                R.layout.bottom_popup_text, R.id.bottom_popup_text,
-                getString(R.string.couldnt_like_post), bottomPopup);
-        note.incrementComments();
+    public void reactNoteLikeSucceeded(Note note, View view){
+        note.changeLiked();
+        note.incrementLikes();
+        ((TextView)view.findViewById(R.id.note_details_like_number)).setText(String.valueOf(note.getLikes()));
+        ((TextView)view.findViewById(R.id.note_details_like_text)).setTextColor(Color.BLUE);
     }
 
     @Override
-    public void unlikeFailed(){
+    public void reactNoteUnlikeSucceeded(Note note, View view){
+        note.changeLiked();
+        note.decrementLikes();
+        ((TextView)view.findViewById(R.id.note_details_like_number)).setText(String.valueOf(note.getLikes()));
+        ((TextView)view.findViewById(R.id.note_details_like_text)).setTextColor(Color.parseColor("#747474"));
+    }
+
+    @Override
+    public void reactNoteLikeFailed(){
+        bottomPopup = Utilities.getBottomPopupText(this,
+                R.layout.bottom_popup_text, R.id.bottom_popup_text,
+                getString(R.string.couldnt_like_post), bottomPopup);
+    }
+
+    @Override
+    public void reactNoteUnlikeFailed(){
         bottomPopup = Utilities.getBottomPopupText(this,
                 R.layout.bottom_popup_text, R.id.bottom_popup_text,
                 getString(R.string.couldnt_unlike_post), bottomPopup);
+    }
+
+    @Override
+    public void reactNoteNoInternet(){
+        bottomPopup = Utilities.getBottomPopupText(this,
+                R.layout.bottom_popup_text, R.id.bottom_popup_text,
+                getString(R.string.no_internet), bottomPopup);
     }
 
     @Override
@@ -168,9 +176,11 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
         bottomPopup = Utilities.getBottomPopupText(this,
                 R.layout.bottom_popup_text, R.id.bottom_popup_text,
                 getString(R.string.comment_post_added), bottomPopup);
-        comments.add(comment);
-        mCommentAdapter.notifyItemInserted(comments.size() - 1);
 
+        Utilities.hideKeyboard(this);
+        mCommentAdapter.removeLast();
+        mCommentAdapter.insert(comment);
+        mCommentAdapter.insertFooter();
         note.incrementComments();
         updateCommentsNumber();
     }
@@ -192,14 +202,16 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
     @Override
     public void getCommentSucceeded(List<Comment> list){
         if (loading){
-            comments.remove(comments.size() - 1);
-            mCommentAdapter.notifyItemRemoved(comments.size());
-            comments.addAll(list);
+            mCommentAdapter.removeLast();
+            mCommentAdapter.insert(list);
+            mCommentAdapter.insertFooter();
+            loading = false;
         }
         else{
-            comments = list;
+            mCommentAdapter.removeAll();
+            mCommentAdapter.insert(list);
+            mCommentAdapter.insertNull();
         }
-        updateRecyclerAdapter();
     }
 
     @Override
@@ -236,29 +248,138 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
     @Override
     public void updateCommentFailed(){}
 
-    private void prepareView(){
-        content = (TextView) findViewById(R.id.note_details_content);
-        hashes = (TextView) findViewById(R.id.note_details_hashes);
-        input = (EditText) findViewById(R.id.comment_insert_text);
-        ((CustomImage) (findViewById(R.id.note_details_icon_back))).init(R.drawable.ic_arrow_black_24dp, R.drawable.ic_arrow_black_24dp);
+    @Override
+    public void onNoteClick(View view, Note note){}
 
-        content.setText(note.getContent());
-        hashes.setText(Utilities.prepareHasheshText(note.getHashesh()));
+    @Override
+    public void onNoteLikeClick(View view, Note note){
+        Utilities.onLikeNoteClick(this, this, view, note);
+    }
 
-        ((TextView)findViewById(R.id.note_details_user)).setText(note.getUsername());
-        ((TextView)findViewById(R.id.note_details_date)).setText(Utilities.decodeDate(note.getDate(), NoteDetailsActivity.this));
-        ((TextView)findViewById(R.id.note_details_item_replays)).setText(String.valueOf(note.getComments()));
-        ((TextView)findViewById(R.id.note_details_like_number)).setText(String.valueOf(note.getLikes()));
+    @Override
+    public void onNoteCommentClick(View view, Note note){
+        input.setFocusableInTouchMode(true);
+        input.requestFocus();
+        Utilities.showKeyboard(this);
+    }
 
-        if (note.getLiked()){
-            ((TextView)findViewById(R.id.note_details_like_text)).setTextColor(Color.BLUE);
+    @Override
+    public void onNoteEllipsisClick(View view, Note note, RelativeLayout layout){
+        if (ellipsisPopup == null){
+            ellipsisPopup = new EllipsisPopup(view.getContext(), new EllipsisPopupListener(){
+                @Override
+                public void onClick(View view){
+                    bottomPopup = Utilities.getBottomPopupText(NoteDetailsActivity.this,
+                            R.layout.bottom_popup_text, R.id.bottom_popup_text,
+                            getString(R.string.report_commited), bottomPopup);
+                }
+            });
         }
-        updateCommentsNumber();
+        ellipsisPopup.showOnAnchor(findViewById(R.id.note_details_ellipsis_icon),
+                RelativePopupWindow.VerticalPosition.ABOVE, RelativePopupWindow.HorizontalPosition.ALIGN_RIGHT, true);
+
+    }
+
+    @Override
+    public void onNoteShareClick(View view, Note note){
+        bottomPopup = Utilities.getBottomPopupLoading(this, R.layout.bottom_popup_loading,
+                R.id.bottom_popup_text, getString(R.string.loading), bottomPopup);
+        Bitmap screenshot = Utilities.getBitmapNote(this, note);
+        Utilities.share(screenshot, NoteDetailsActivity.this);
+    }
+
+    @Override
+    public void onRefreshClick(){
+        recyclerView.smoothScrollToPosition(0);
+        loading = false;
+        page = 0;
+        getComments();
+    }
+
+    @Override
+    public void onCommentClick(View v, Comment comment){
+        Bundle data = new Bundle();
+        data.putParcelable("comment", Parcels.wrap(comment));
+        data.putParcelable("note", Parcels.wrap(note));
+
+        currentView = v;
+        currentComment = comment;
+
+        Intent intent = new Intent(getApplication(), CommentDetailsActivity.class);
+        intent.putExtras(data);
+        startActivity(intent);
+        overridePendingTransition(R.anim.fade_in, R.anim.fade_out);
+    }
+
+    @Override
+    public void onCommentLikeClick(View v, Comment comment){
+        Utilities.onLikeCommentClick(NoteDetailsActivity.this, NoteDetailsActivity.this, v, comment);
+    }
+
+    @Override
+    public void onCommentReplayClick(View v, Comment comment){
+        Bundle data = new Bundle();
+        data.putParcelable("comment", Parcels.wrap(comment));
+        data.putParcelable("note", Parcels.wrap(note));
+
+        currentView = v;
+        currentComment = comment;
+
+        Intent intent = new Intent(getApplication(), CommentDetailsActivity.class);
+        intent.putExtras(data);
+        startActivity(intent);
+        overridePendingTransition(R.anim.fade_in, R.anim.fade_out);
+    }
+
+    @Override
+    public void onCommentEllipsisClick(View v, Comment comment, RelativeLayout layout){
+        if (ellipsisPopup == null){
+            ellipsisPopup = new EllipsisPopup(v.getContext(), new EllipsisPopupListener() {
+                @Override
+                public void onClick(View v) {
+                    bottomPopup = Utilities.getBottomPopupText(NoteDetailsActivity.this,
+                            R.layout.bottom_popup_text, R.id.bottom_popup_text,
+                            getString(R.string.report_commited), bottomPopup);
+                }
+            });
+        }
+        ellipsisPopup.showOnAnchor(findViewById(R.id.comment_ellipsis_icon),
+                RelativePopupWindow.VerticalPosition.ABOVE, RelativePopupWindow.HorizontalPosition.ALIGN_RIGHT, true);
+
+    }
+
+    @Override
+    public void onCommentShareClick(View v, Comment comment){
+        bottomPopup = Utilities.getBottomPopupLoading(this, R.layout.bottom_popup_loading,
+                R.id.bottom_popup_text, getString(R.string.loading), bottomPopup);
+        Bitmap screenshot = Utilities.getBitmapComment(this, note, comment);
+        Utilities.share(screenshot, this);
+    }
+
+    @Override
+    public void onEnd(){
+        if (mCommentAdapter.getItemCount() < note.getComments() + 3){
+            if (!loading){
+                page++;
+                loading = true;
+                getComments();
+            }
+        }
+    }
+
+    private void init(){
+        initInput();
+    }
+
+    private void initInput(){
+
+        input = findViewById(R.id.comment_insert_text);
+        //updateCommentsNumber();
         //initRefreshLayout();
     }
 
     private void initRefreshLayout(){
-        mSwipeRefreshLayout = (SwipeRefreshLayout) findViewById(R.id.swipe_container);
+        mSwipeRefreshLayout = findViewById(R.id.swipe_container);
         mSwipeRefreshLayout.setOnRefreshListener(this);
         mSwipeRefreshLayout.setColorSchemeResources(R.color.colorPrimary,
                 android.R.color.holo_green_dark,
@@ -280,11 +401,20 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
     }
 
     private void updateCommentsNumber(){
-        String noOfComments = Utilities.getCommentVariation(note.getComments(), NoteDetailsActivity.this);
-        ((TextView)(findViewById(R.id.note_details_comments_number))).setText(noOfComments);
+        String noOfComments = Utilities.getCommentVariation(note.getComments(), this);
+
+        RecyclerView.ViewHolder holder = recyclerView.findViewHolderForLayoutPosition(0);
+        if (holder != null){
+            ((TextView)(holder.itemView.findViewById(R.id.note_details_comments_number))).setText(String.valueOf(note.getComments()));
+        }
+        holder = recyclerView.findViewHolderForLayoutPosition(1);
+        if (holder != null){
+            ((TextView)holder.itemView.findViewById(R.id.note_details_comments_number)).setText(noOfComments);
+        }
+        //((TextView)(findViewById(R.id.note_details_comments_number))).setText(noOfComments);
     }
 
-    private void updateRecyclerAdapter(){
+    private void initCommentAdapter(){
         mCommentAdapter = new CommentAdapter(comments, new CommentClickListener() {
             @Override
             public void onCommentClick(View v, Comment comment) {
@@ -323,7 +453,7 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
             }
 
             @Override
-            public void onCommentEllipsisClick(View v, RelativeLayout layout){
+            public void onCommentEllipsisClick(View v, Comment comment, RelativeLayout layout){
                 if (ellipsisPopup == null){
                     ellipsisPopup = new EllipsisPopup(v.getContext(), new EllipsisPopupListener(){
                         @Override
@@ -347,94 +477,22 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
                 Utilities.share(screenshot, NoteDetailsActivity.this);
             }
 
-        }, this);
+        }, this, note);
+        mCommentAdapter.initListeners(this, this, this, this);
         recyclerView.setAdapter(mCommentAdapter);
     }
 
     private void initRecyclerView(){
-        recyclerView = (RecyclerView) findViewById(R.id.note_details_comments_recycler_view);
-        recyclerView.setItemAnimator(new DefaultItemAnimator());
+        recyclerView = findViewById(R.id.note_details_recycler_view);
 
-        LayoutManagerNoScroll lm = new LayoutManagerNoScroll(this, LinearLayoutManager.VERTICAL,false);
-        lm.setScrollEnabled(false);
+        mLayoutManager = new LinearLayoutManager(this);
+        recyclerView.setLayoutManager(mLayoutManager);
 
-        recyclerView.setLayoutManager(lm);
-        recyclerView.setNestedScrollingEnabled(false);
-
-        Drawable divider = ResourcesCompat.getDrawable(getResources(), R.drawable.comments_divider, null);
-        if (divider != null){
-            CommentsDivider dividerItemDecoration = new CommentsDivider(divider);
-            recyclerView.addItemDecoration(dividerItemDecoration);
-        }
-
-        scrollView = findViewById(R.id.scroll_view_note);
-        scrollView.setOnScrollChangeListener(new NestedScrollView.OnScrollChangeListener() {
-            @Override
-            public void onScrollChange(NestedScrollView v, int scrollX, int scrollY, int oldScrollX, int oldScrollY) {
-                View view = (View) scrollView.getChildAt(scrollView.getChildCount() - 1);
-                int diff = (view.getBottom() - (scrollView.getHeight() + scrollView.getScrollY()));
-
-                if (diff == 0) {
-                    if (comments.size() < note.getComments()){
-                        loading = true;
-                        comments.add(null);
-                        mCommentAdapter.notifyItemInserted(comments.size() - 1);
-                        //Toast.makeText(NoteDetailsActivity.this, "gggg", Toast.LENGTH_SHORT).show();
-                        page++;
-                        getComments();
-                    }
-                }
-            }
-        });
+        recyclerView.getItemAnimator().setChangeDuration(0);
+        initCommentAdapter();
     }
 
     private void initListeners(){
-        findViewById(R.id.note_details_like_it_layout).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                bottomPopup = Utilities.onLikePostClick(NoteDetailsActivity.this,
-                        NoteDetailsActivity.this, note, view, bottomPopup,
-                        R.id.note_details_like_text, R.id.note_details_like_number);
-            }
-        });
-
-        findViewById(R.id.note_details_replay_layout).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                input.setFocusableInTouchMode(true);
-                input.requestFocus();
-                Utilities.showKeyboard(NoteDetailsActivity.this);
-            }
-        });
-
-        findViewById(R.id.note_details_ellipsis_layout).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                if (ellipsisPopup == null){
-                    ellipsisPopup = new EllipsisPopup(view.getContext(), new EllipsisPopupListener(){
-                        @Override
-                        public void onClick(View view){
-                            bottomPopup = Utilities.getBottomPopupText(NoteDetailsActivity.this,
-                                    R.layout.bottom_popup_text, R.id.bottom_popup_text,
-                                    getString(R.string.report_commited), bottomPopup);
-                        }
-                    });
-                }
-                ellipsisPopup.showOnAnchor(findViewById(R.id.note_details_ellipsis_icon),
-                        RelativePopupWindow.VerticalPosition.ABOVE, RelativePopupWindow.HorizontalPosition.ALIGN_RIGHT, true);
-            }
-        });
-
-        findViewById(R.id.note_details_share_layout).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                bottomPopup = Utilities.getBottomPopupLoading(NoteDetailsActivity.this,
-                        R.layout.bottom_popup_loading, R.id.bottom_popup_text, getString(R.string.loading), bottomPopup);
-                Bitmap screenshot = Utilities.getBitmapNote(NoteDetailsActivity.this, note);
-                Utilities.share(screenshot, NoteDetailsActivity.this);
-            }
-        });
-
         findViewById(R.id.note_details_button_back).setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
@@ -480,17 +538,6 @@ public class NoteDetailsActivity extends Activity implements FailedCallback, Com
                     }
                 }
 
-            }
-        });
-
-        findViewById(R.id.note_details_comments_refresh).setOnClickListener(new View.OnClickListener() {
-            @Override
-            public void onClick(View view) {
-                loading = false;
-                scrollView.fullScroll(View.FOCUS_UP);
-                scrollView.smoothScrollTo(0,0);
-                page = 0;
-                getComments();
             }
         });
     }
